--- a/package.json
+++ b/package.json
@@ -1,39 +1,49 @@
 {
     "name": "x8664assemblys",
     "displayName": "x8664assembly (.S)",
-	"description": "x86 and x86_64 assembly syntax highlighting for (.S)",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/SuCiCcada/VSCode.x86_64Assembly.git"
-	},
-	"icon": "logo.png",
-	"license": "MIT",
-	"publisher": "pengyifu",
+    "description": "x86 and x86_64 assembly syntax highlighting for (.S)",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/SuCiCcada/VSCode.x86_64Assembly.git"
+    },
+    "icon": "logo.png",
+    "license": "MIT",
+    "publisher": "pengyifu",
     "version": "0.1.0",
     "engines": {
         "vscode": "^1.41.0"
     },
     "categories": [
         "Programming Languages"
-	],
-	"keywords": [
-		"programming",
-		"languages",
-		"assembly",
-		"asm",
+    ],
+    "keywords": [
+        "programming",
+        "languages",
+        "assembly",
+        "asm",
         ".S"
-	],
+    ],
     "contributes": {
-        "languages": [{
-            "id": "asm",
-            "aliases": ["x86 and x86_64 assembly", "asm"],
-            "extensions": [".asm",".nasm",".yasm",".inc",".s"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "asm",
-            "scopeName": "source.asm.x86_64",
-            "path": "./syntaxes/language-x86_64-assembly.tmLanguage"
-        }]
+        "languages": [
+            {
+                "id": "asm",
+                "aliases": [
+                    "x86 and x86_64 assembly",
+                    "asm",
+                    ".S"
+                ],
+                "extensions": [
+                    ".S"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "asm",
+                "scopeName": "source.asm.x86_64",
+                "path": "./syntaxes/language-x86_64-assembly.tmLanguage"
+            }
+        ]
     }
 }
